--- a/docs/1.md
+++ b/docs/1.md
@@ -34,7 +34,14 @@
 ## 3. setState之后发生了什么？
     参考链接：https://blog.csdn.net/u012149906/article/details/99634687
 ## 4. Key的作用是什么？
+    通过给列表绑定显示key值，当state和props更新时，在render重新渲染之后生成新的virtual Dom树，然后新旧virtual Dom树再进行比对的时候，
+    能够更清楚的知道那些地方改变了以及需要进行什么操作，可以大大减少多余的dom操作，提高网页性能。
 ## 5. diff算法，了解fiber？
+    diff算法策略：
+        1. tree diff： UI中节点跨层级的操作少的可以忽略不计
+        2. component diff: 拥有相同类的两个组件将会生成相似的树形结构，拥有不同类的两个组件将不会生成相似的树形结构
+        3. 对于同一层的一组节点，他们可以通过唯一id（key）进行区分
+    fiber: (时间切片)
 ## 6. css模块化？
 ## 7. 单页面应用和多页面的优缺点？
 ## 8. React 中 refs 的作用是什么？
