--- a/docs/2.md
+++ b/docs/2.md
@@ -1,8 +1,6 @@
 ## react调用setState之后发生了什么？
-    代码中调用setState之后，React会将传入的参数对象与当前的状态合并，然后出发所谓调和过程。经过调和过程，react会以相对高效的方式根据新的状态构建React元素树并且着手重新渲染整个UI界面。在react得到元素树之后，React会自动计算新的树与老树的节点差异，然后根据差异对界面进行最小化重新渲染。React能够相对精确的知道那些位置发生了改变以及应该如何改变，这就保证了按需更新，而不是全部重新渲染。 
-    react会将传入的参数对象与组件当前状态合并，然后出发调和过程，在调和过程中react会以相对高效的方式根据新的状态
-构建React元素树并重新渲染整个页面
-       react得到新的元素树后，react会自动计算新树与老树的节点差异，然后根据差异对界面进行最小化的渲染，通过diff算法
+    代码中调用setState之后，React会将传入的参数对象与当前的状态合并，react会将传入的参数对象与组件当前状态合并，然后触发调和过程，在调和过程中react会以相对高效的方式根据新的状态
+构建React元素树并重新渲染整个页面，react得到新的元素树后，react会自动计算新树与老树的节点差异，然后根据差异对界面进行最小化的渲染，通过diff算法
 React能够精确的知道哪些地方发生了改变以及需要进行的操作，保证了组件的按需更新而不是渲染整个界面 
     调和过程原理：
         1. this.setState(newState) =>
