--- a/docs/1.md
+++ b/docs/1.md
@@ -52,4 +52,5 @@
     reducer: 一个纯函数，接受旧的state和action，返回新的state
     store： 把state，action，reducer联系起来的一个对象
 ## 11. redux-thunk的原理是什么？
-    
+
+## 12. 设计模式？
