--- a/docs/1.md
+++ b/docs/1.md
@@ -54,3 +54,5 @@
 ## 11. redux-thunk的原理是什么？
 
 ## 12. 设计模式？
+    参考链接：https://www.jianshu.com/p/4f3014fb8b8b
+    单例模式：就是保证一个类只有一个实例，实现方法一般是先判断实例存在与否，如果存在直接返回，如果不存在就创建了再返回，这就确保了一个类只有一个实例对象。
